2010-02-25  Andreas Kling  <andreas.kling@nokia.com>

        Reviewed by Darin Adler.

        Optimize decoding of Latin-1 text by exploiting the fact that most of it will
        be ASCII-only data.

        https://bugs.webkit.org/show_bug.cgi?id=35233

        * platform/text/TextCodecLatin1.cpp:
        (WebCore::TextCodecLatin1::decode):

2010-02-25  Pavel Feldman  <pfeldman@chromium.org>

        Reviewed by Dimitri Glazkov.

        Web Inspector: make script lines count calculation lazy.

        https://bugs.webkit.org/show_bug.cgi?id=35392

        * inspector/front-end/Script.js:
        (WebInspector.Script):
        (WebInspector.Script.prototype.get linesCount):
        * inspector/front-end/ScriptsPanel.js:
        * inspector/front-end/SourceView.js:
        (WebInspector.SourceView.prototype._addBreakpoint):

2010-02-25  James Choi  <jchoi42@pha.jhu.edu>

        Reviewed by David Levin.

        Change hardcoded gcc paths to be Solaris friendly
        https://bugs.webkit.org/show_bug.cgi?id=35213

        * bindings/scripts/CodeGeneratorObjC.pm:
        * bindings/scripts/IDLParser.pm:
        * css/make-css-file-arrays.pl:
        * dom/make_names.pl:

2010-02-25  Xan Lopez  <xlopez@igalia.com>

        Reviewed by Gustavo Noronha.

        Workaround Java plugins not drawing themselves properly on first
        expose by doing a late size-allocate after 'plug-added' has been
        emitted on the embedding GtkSocket. It's unclear to me if this is
        a bug in our side or theirs, but this should be pretty safe and
        fixes the annoyance while we investigate it further.

        * plugins/gtk/PluginViewGtk.cpp:
        (WebCore::plugAddedCallback):
        (WebCore::PluginView::platformStart):

2010-02-23  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Tor Arne Vestbø.

        Add missing include guards

        * loader/CrossOriginPreflightResultCache.h:
        * loader/MainResourceLoader.h:
